--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 def extraLibraryFile = new File("${project.projectDir}/extraLibraries.gradle")
-if(extraLibraryFile.exists()){
+if (extraLibraryFile.exists()) {
     apply from: "${project.projectDir}/extraLibraries.gradle"
 }
 
@@ -23,6 +23,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -32,8 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    if (extraLibraryFile.exists()){
-        extraLibrary.each{implementation it}
+    if (extraLibraryFile.exists()) {
+        extraLibrary.each { implementation it }
     }
 }
 
